--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 
     console.log(mda);
 
+    const a2d = new DStruct.Array2D(5, 5, Uint8Array);
+
+    a2d.put(123, 3, 1);
+
+    console.log(a2d.get(3, 1));
+
+    console.log(a2d);
+
 
 </script>
